Version 7.2. 08 October 2018 - xxx edition

Added setting to specify configuration file
Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, and change the focus to the background
Improved vu-meters: high volumes are shown in red
Improved sprite viewer: you can view sprites up to 512x512
Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
Fixed visual glitches in some menus when interlaced enabled: audio wave, visualmem, ay piano, wave piano, view sprites
Fixed audio bug: sending a sample to the DAC by using Next registers, it wasn’t reseting the silence detection counter, so sound would probably be frozen (and repeated again, and again...)


Version 7.1. 24 September 2018 - 5th Anniversary edition

Yes, this is the 5th Anniversary edition, so, 5 years have passed since version 0.1: 24th September 2013 :))

Here is the changelog for version 7.1:

Added ACB/ABC/BAC/Custom AY Stereo emulation
Added joystick action to change emulated joystick type: Sinclair, Kempston, etc
Added Basic viewer for .bas basic files (plain ascii or Basic Spectrum data with tokens), .baszx80 (Basic ZX80 with tokens), .baszx81 (Basic ZX81 with tokens), Z88 basic files with tokens
Added Sped format file viewer
Added ZXUno DMA emulation. Added some dma demos to zxuno.mmc image
Added TBBlue/DataGear/MB02 DMA emulation
Added TBBlue Multiface emulation
Added TBBlue Debug menu: Sprite navigator, Video layers, Video info
Added setting to deny turbo mode on TBBlue, useful on slow machines
Added Beeper Piano Menu
Added new Z80 TBBlue opcodes and deleted obsolete ones
Added setting to change Kempston Mouse sensitivity
Added menu item to create autoconfig files (.config) 