@@ -2,6 +2,9 @@ Version 7.2. 08 October 2018 - xxx edition
 
 Added setting to specify configuration file
 Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, and change the focus to the background
+Added key to save text windows contents to a file
+Added setting to send a final space after every word in the osd adventure keyboard
+Improved ZRCP commands smartload and snapshot-load
 Improved vu-meters: high volumes are shown in red
 Improved sprite viewer: you can view sprites up to 512x512
 Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
